fix display of claro NumberSpinner on FF and webkit in quirks mode (it was much too tall, 100% of the containing !ComboBox), refs #10034
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22062 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/form/NumberSpinner.css
+++ b/themes/claro/form/NumberSpinner.css
@@ -5,7 +5,6 @@
 .claro .dijitSpinnerButtonContainer {
 	overflow: hidden;
 	position: relative;
-	height: 100%;
 	width: auto;
 	padding: 0 2px;
 }
